# rules_swift_package_manager

./: .bazelrc  go.mod  go.sum
examples/agora_rtc_engine_example/: Package.swift  WORKSPACE  swift_deps.bzl  swift_deps_index.json
examples/agora_rtc_engine_example/Tests/AgoraRtcEngineTests/: BUILD.bazel  InitTest.swift
