load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "AgoraRtcEngineTestsLib",
    testonly = True,
    srcs = ["InitTest.swift"],
    module_name = "AgoraRtcEngineTests",
    tags = ["manual"],
    deps = [
        "@swiftpkg_agorartcengine_ios//:remote_archive_AgoraDav1d.xcframework.zip_AgoraDav1d",
        "@swiftpkg_agorartcengine_ios//:remote_archive_AgoraRtcKit.xcframework.zip_AgoraRtcKit",
        "@swiftpkg_agorartcengine_ios//:remote_archive_AgoraSoundTouch.xcframework.zip_AgoraSoundTouch",
        "@swiftpkg_agorartcengine_ios//:remote_archive_Agorafdkaac.xcframework.zip_Agorafdkaac",
        "@swiftpkg_agorartcengine_ios//:remote_archive_Agoraffmpeg.xcframework.zip_Agoraffmpeg",
    ],
)

ios_unit_test(
    name = "AgoraRtcEngineTests",
    minimum_os_version = "14.0",
    visibility = ["//visibility:private"],
    deps = [":AgoraRtcEngineTestsLib"],
)
